--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="container px-4 px-lg-5 text-center">
                     <h1 class="mb-1">PARAPENTE GIJÓN</h1>
                     <h2 class="mb-5"><em>Empresa de Turismo Activo de Asturias</em></h2>
-                    <h3 class="mb-5"><em><a href="tel:667611418">Teléfono: 613 050 100</a></em></h3>
+                    <h3 class="mb-5"><em><a href="tel:613050100">Teléfono: 613 050 100</a></em></h3>
                 </div>
 
                 <div class="row gx-4 gx-lg-5 justify-content-center">
@@ -242,7 +242,7 @@
                         <a class="social-link rounded-circle text-white mr-3" href="https://www.facebook.com/search/top?q=parapente%20gijón"><i class="icon-social-facebook"></i></a>
                     </li>
                 </ul>
-                <p class="text-muted small mb-0">Teléfono: 613 050 100</p>
+                <p class="text-muted small mb-0"><a href="tel:613050100">Teléfono: 613 050 100</a></p>
                 <p class="text-muted small mb-0">Correo Electrónico: <a href="mailto:parapentegijon@icloud.com">parapentegijon@icloud.com</a></p>
                 <p class="text-muted small mb-0">Copyright &copy; Parapente Gijón 2022</p>
 
