--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
                     <h1 class="mb-1">PARAPENTE GIJÓN</h1>
                     <h2 class="mb-5"><em>Empresa de Turismo Activo de Asturias</em></h2>
                     <h3 class="mb-5"><em><a href="tel:613050100">Teléfono: 613 050 100</a></em></h3>
+                    <h4 class="mb-5"><em><a href="mailto:info@parapentegijon.com">info@parapentegijon.com</a></em></h4>
                 </div>
 
                 <div class="row gx-4 gx-lg-5 justify-content-center">
@@ -256,7 +257,7 @@
                     </li>
                 </ul>
                 <p class="text-muted small mb-0"><a href="tel:613050100">Teléfono: 613 050 100</a></p>
-                <p class="text-muted small mb-0">Correo Electrónico: <a href="mailto:info@parapentegijon.com">info@parapentegijon.com</a></p>
+                <p class="text-muted small mb-0"><a href="mailto:info@parapentegijon.com">info@parapentegijon.com</a></p>
                  <p class="text-muted small mb-0">Calle sierra del  Sueve, 33 bajo</p>
                  <p class="text-muted small mb-0">33211 Gijón (Asturias)</p>
                    
