--- a/index.html
+++ b/index.html
@@ -99,12 +99,7 @@
                     <h2 class="mb-5"></h2>
                 </div>
                 <div class="row gx-4 gx-lg-5">
-                    <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
-                        <span class="service-icon rounded-circle mx-auto mb-3">40 €</span>
-                        <p class="text-faded mb-0">Vuelo Biplaza SELFIE</p>
-                        <p class="text-faded mb-0">1 Persona + Piloto</p>
-                        <p class="text-faded mb-0">5-6 minutos</p>
-                    </div>
+                   
                     <div class="col-lg-3 col-md-6 mb-5 mb-lg-0">
                         <span class="service-icon rounded-circle mx-auto mb-3">55 €</span>
                         <p class="text-faded mb-0">Vuelo Biplaza</p>
@@ -133,7 +128,7 @@
                             &nbsp;
                         </p>
                         <p>
-                            <a class="btn btn-xl btn-dark" href="https://www.reservaonline.support/parapentegijon/index.html">RESERVAR</a>
+                            <!-- a class="btn btn-xl btn-dark" href="https://www.reservaonline.support/parapentegijon/index.html">RESERVAR</a-->
                         </p>
                         <p class="lead mb-5">
                             Sin pagos por adelantado.<br/> 
@@ -189,8 +184,8 @@
                         <a class="portfolio-item" href="#!">
                             <div class="caption">
                                 <div class="caption-content">
-                                    <div class="h3">Vuelo SELFIE</div>
-                                    <div class="h3">40 € (5-6 minutos)</div>
+                                    <div class="h3"></div>
+                                    <div class="h3"></div>
                                     <p class="mb-0">Tanto para vuelos de costa o de interior</p>
                                 </div>
                             </div>
@@ -355,7 +350,7 @@
             <div class="container px-4 px-lg-5 text-left">
                 <h2 class="mb-4">PROTECCION DE DATOS (Reglamento UE 2016/679, de 27 de abril de 2016)</h2>
                 <div>
-                    RESPONSABLE: PARAPENTE GIJÓN Dirección Postal: calle Sierra del Sueve, nº 33 – bajo 33211 Gijón-Asturias-España. Teléfono: 613050100. Dirección electrónica: parapentegijon@icloud.com
+                    RESPONSABLE: PARAPENTE GIJÓN Dirección Postal: calle Sierra del Sueve, nº 26 – 1º 33211 Gijón-Asturias-España. Teléfono: 613050100. Dirección electrónica: parapentegijon@icloud.com
                 </div>
                 <div>
                 En PARAPENTE GIJÓN tratamos la información que nos facilita con el fin de gestionar administrativa y fiscalmente los servicios contratados. La base jurídica del tratamiento de los datos es la ejecución del contrato. Los datos proporcionados se conservarán mientras se mantenga la relación comercial y durante los años necesarios para cumplir con las obligaciones legales. Los datos no se cederán a terceros, salvo obligación legal. Sus datos no serán transferidos a un tercer país. Podrá ejercitar los derechos de acceso, rectificación, supresión, oposición, portabilidad o limitación del tratamiento de sus datos personales, enviando solicitud escrita a nuestra dirección postal o electrónica, acreditando su identidad. Tiene usted el derecho a presentar una reclamación ante la AEPD en el supuesto de que considere que se infringen sus derechos de protección de datos (Reglamento UE 2016/679, de 27 de abril de 2016).
@@ -392,7 +387,7 @@
                 </ul>
                 <p class="text-muted small mb-0"><a href="tel:613050100">Teléfono: 613 050 100</a></p>
                 <p class="text-muted small mb-0"><a href="mailto:info@parapentegijon.com">info@parapentegijon.com</a></p>
-                 <p class="text-muted small mb-0">Calle sierra del  Sueve, 33 bajo</p>
+                 <p class="text-muted small mb-0">Calle sierra del  Sueve, 26, 1º</p>
                  <p class="text-muted small mb-0">33211 Gijón (Asturias)</p>
                    
                  <p class="text-muted small mb-0">Copyright &copy; Parapente Gijón 2023</p>
